--- a/.github/workflows/ci_cd.yaml
+++ b/.github/workflows/ci_cd.yaml
@@ -28,7 +28,7 @@ jobs:
 
       - name: Run tests with coverage
         run: |
-          pytest --cov=services --cov-report=term-missing tests/
+          PYTHONPATH=. pytest --cov=services --cov-report=term-missing tests/
 
   build:
     runs-on: windows-latest
